Limit includes in gtksignal.h

https://bugzilla.gnome.org/show_bug.cgi?id=536767