gtk/gtksignal.h
@@ -29,7 +29,9 @@
 #ifndef __GTK_SIGNAL_H__
 #define __GTK_SIGNAL_H__
 
-#include <gtk/gtk.h>
+#include <gtk/gtkenums.h>
+#include <gtk/gtktypeutils.h>
+#include <gtk/gtkobject.h>
 #include <gtk/gtkmarshal.h>
 
 G_BEGIN_DECLS
